--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -3803,6 +3803,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Сила на звука за обаждания"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Сила на звука на будилника"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Сила на звука за звън. и известия"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Сила на звука при известие"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Мелодия на телефона"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Стандартен звук за известяване"</string>
