--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -1988,7 +1988,7 @@
     <string name="contributors_title" msgid="7965640251547037965">"Avustajat"</string>
     <string name="manual" msgid="3651593989906084868">"Käyttöopas"</string>
     <string name="regulatory_labels" msgid="5960251403367154270">"Viranomaismerkinnät"</string>
-    <string name="safety_and_regulatory_info" msgid="8285048080439298528">"Turvallisuus- ja lakiopas"</string>
+    <string name="safety_and_regulatory_info" msgid="8285048080439298528">"Turvallisuus- ja säädöstenmukaisuusopas"</string>
     <string name="copyright_title" msgid="83245306827757857">"Tekijänoikeudet"</string>
     <string name="license_title" msgid="8745742085916617540">"Käyttölupa"</string>
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ‑järjestelmäpäivitysten lisenssit"</string>
@@ -3797,6 +3797,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Puhelun äänenvoimakkuus"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Hälytyksen voimakkuus"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Soittoäänen/ilmoitusten voimakkuus"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Ilmoituksen äänenvoimakkuus"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Puhelimen soittoääni"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Ilmoituksen oletusääni"</string>
