--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -3797,6 +3797,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Volume panggilan"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Volume alarm"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Volume dering &amp; notifikasi"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Volume notifikasi"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Nada dering ponsel"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Suara notifikasi default"</string>
