--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -3797,6 +3797,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Kelantangan panggilan"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Kelantangan penggera"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Kelantangan dering &amp; pemberitahuan"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Kelantangan pemberitahuan"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Nada dering telefon"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Bunyi pemberitahuan lalai"</string>
