Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I814f8120bdf869f96b51ccedf7d1fa737740bb06

Former-commit-id: dece402e5a4625fc47d6844c1c4dcf5857d31d36

--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -1850,7 +1850,7 @@
     <string name="sms_change_default_dialog_title" msgid="2343439998715457307">"¿Quieres cambiar la aplicación de SMS?"</string>
     <string name="sms_change_default_dialog_text" msgid="8777606240342982531">"¿Quieres usar <xliff:g id="NEW_APP">%1$s</xliff:g> en lugar de <xliff:g id="CURRENT_APP">%2$s</xliff:g> como la aplicación de SMS?"</string>
     <string name="sms_change_default_no_previous_dialog_text" msgid="6215622785087181275">"¿Quieres usar <xliff:g id="NEW_APP">%s</xliff:g> como la aplicación de SMS?"</string>
-    <string name="network_scorer_picker_title" msgid="2022922801936206195">"Proveedor de calificación de red"</string>
+    <string name="network_scorer_picker_title" msgid="2022922801936206195">"Proveedor de calificación de redes"</string>
     <string name="network_scorer_picker_none_preference" msgid="8894034333043177807">"Ninguno"</string>
     <string name="network_scorer_change_active_dialog_title" msgid="7005220310238618141">"¿Cambiar de asistente de Wi-Fi?"</string>
     <string name="network_scorer_change_active_dialog_text" msgid="7006057749370850706">"¿Deseas usar <xliff:g id="NEW_APP">%1$s</xliff:g> en lugar de <xliff:g id="CURRENT_APP">%2$s</xliff:g> para administrar tus conexiones de red?"</string>
