--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -2996,7 +2996,7 @@
     <string name="menu_duration_12h" msgid="9206922888181602565">"12 小时"</string>
     <string name="menu_duration_1d" msgid="8538390358158862330">"1天"</string>
     <string name="menu_show_system" msgid="3780310384799907818">"显示系统应用"</string>
-    <string name="menu_hide_system" msgid="5197937451381420622">"隐藏系统程序"</string>
+    <string name="menu_hide_system" msgid="5197937451381420622">"隐藏系统应用"</string>
     <string name="menu_show_percentage" msgid="6143205879027928330">"显示百分比"</string>
     <string name="menu_use_uss" msgid="1663914348353623749">"使用 USS"</string>
     <string name="menu_proc_stats_type" msgid="5048575824389855689">"统计信息类型"</string>
